--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Greg Pang
 description: Ph.D., Nuclear Scientist turned Data Scientist
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/gregpang/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/gregpang/gregpang.github.io/master/images/jekyll-logo.png
 
 #
 # Flags below are optional
