--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Greg Pang
 
 # Short bio or description (displayed in the header)
-description: Ph.D., Nuclear Scientist turned Data Scientist
+description: Greg Pang, Ph.D., Nuclear Scientist turned Data Scientist
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/gregpang/gregpang.github.io/master/images/jekyll-logo.png
